--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -46,8 +46,8 @@ a
   text-decoration: none
   &:hover, &:focus
     color: $color-theme-dark
-    text-decoration: underline
-
+  &:hover
+    text-decoration underline
 .pull-left
   float: left
 
@@ -64,6 +64,8 @@ a
 input, button, textarea
   font-family inherit
   font-size inherit
+  -webkit-appearance none
+
 
 @import "../components/btn/index.styl"
 @import "../components/grid/grid.styl"
@@ -73,6 +75,8 @@ input, button, textarea
 // 数据
 @import "../components/pagination/index.styl"
 @import "../components/table/index.styl"
+@import "../components/input/index.styl"
 
 @import "../components/portal/index.styl"
 @import "../components/upload/index.styl"
+@import "../components/comment/index.styl"
