--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -68,15 +68,13 @@ input, button, textarea
 
 
 @import "../components/btn/index.styl"
-@import "../components/grid/grid.styl"
+@import "../components/grid/index.styl"
 
 @import "../components/radio/index.styl"
 @import "../components/checkbox/index.styl"
 // 数据
 @import "../components/pagination/index.styl"
 @import "../components/table/index.styl"
-@import "../components/input/index.styl"
 
 @import "../components/portal/index.styl"
 @import "../components/upload/index.styl"
-@import "../components/comment/index.styl"
