--- a/docs/css/style.styl
+++ b/docs/css/style.styl
@@ -11,8 +11,8 @@ body
     background: #fff
     box-shadow: rgba(0, 0, 0, .05) 0 0 8px
 
-.vui-doc .v-nav
-    height 80px
+.vui-doc .v-topbar
+    height 60px
 
 .menu-wrap
     height 100%
@@ -30,7 +30,7 @@ body
         color #333
         &:hover
             background #eee
-        &.router-link-active
+        &.active
             color: #fff
             background $color-theme
 
