add form form-item validations

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -78,3 +78,5 @@ input, button, textarea
 
 @import "../components/portal/index.styl"
 @import "../components/upload/index.styl"
+
+@import "../components/article/index.styl"
