--- a/docs/css/style.styl
+++ b/docs/css/style.styl
@@ -2,17 +2,20 @@
 
 @import "../../src/css/style.styl"
 
+@import "./mdeditor.css"
+
 @import "../../node_modules/highlight.js/styles/github.css"
 
+
 body
-    background: #fff
+    background: #f1f1f1
 
 .doc-container
     background: #fff
-    box-shadow: rgba(0, 0, 0, .05) 0 0 8px
-
 .vui-doc .v-topbar
     height 60px
+    background #fff
+    margin-bottom 20px
 
 .menu-wrap
     height 100%
