--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -60,14 +60,15 @@ a
     display: table
     content: " "
     clear: both
-
+.flex
+  display flex
+  align-items center
 input, button, textarea
   font-family inherit
   font-size inherit
   -webkit-appearance none
 
 
-@import "../components/btn/index.styl"
 @import "../components/grid/index.styl"
 
 @import "../components/radio/index.styl"
@@ -80,3 +81,4 @@ input, button, textarea
 @import "../components/upload/index.styl"
 
 @import "../components/article/index.styl"
+@import "../components/toast/index.styl"
