--- a/src/css/vars.styl
+++ b/src/css/vars.styl
@@ -1,5 +1,5 @@
 // 主色
-$color-theme = #3492E9
+$color-theme = #3490DE
 $color-theme-light = lighten($color-theme, 20%)
 $color-theme-dark = darken($color-theme, 10%)
 // 辅助色
@@ -24,8 +24,8 @@ $color-gray = #ccc
 // 默认按钮hover
 $color-gray-light = #eee
 // 默认按钮active、按钮disabled背景
-$color-gray-dark = #ddd
-$color-disabled = #bbb
+$color-gray-dark = #bbb
+$color-disabled = #cacaca
 
 $color-border = #e5e5e5
 
@@ -58,17 +58,17 @@ $screen = {
     sm:{
         min-width:768px,
         container-width:720px
-        article-padding: 0 20px
+        article-padding: 0 15px
     },
     md:{
         min-width:992px,
-        container-width:960px,
-        article-padding:0 50px
+        container-width:840px,
+        article-padding:0 20px
     },
     lg:{
         min-width:1200px,
-        container-width:1080px,
-        article-padding:0 100px
+        container-width:960px,
+        article-padding:0 50px
     }
 }
 // 栅格列数
