del unused config

--- a/src/css/vars.styl
+++ b/src/css/vars.styl
@@ -1,5 +1,6 @@
 // 主色
 $color-theme = #3490DE
+$color-logo = #E44D26
 $color-theme-light = lighten($color-theme, 20%)
 $color-theme-dark = darken($color-theme, 10%)
 // 辅助色
@@ -58,7 +59,7 @@ $screen = {
     sm:{
         min-width:768px,
         container-width:720px
-        article-padding: 0 15px
+        article-padding:0 15px
     },
     md:{
         min-width:992px,
