split style and template

--- a/src/components/btn/index.styl
+++ b/src/components/btn/index.styl
@@ -1,71 +1,85 @@
 .v-btn
-    display inline-block
-    outline none
-    padding 9px 15px
-    cursor pointer
-    font-family inherit
-    font-size inherit
-    user-select none
-    border 1px solid $color-gray
-    background #fff
-    line-height 1
+  display inline-block
+  outline none
+  padding 9px 15px
+  cursor pointer
+  font-family inherit
+  font-size inherit
+  user-select none
+  border 1px solid $color-gray
+  background #fff
+  line-height 1
+  &:hover
+    background $color-gray-light
+  &:active
+    background $color-gray-dark
+  &[disabled]
+    background $color-disabled
+    color $color-assist
+    border-color $color-gray
+    cursor not-allowed
     &:hover
-        background $color-gray-light
     &:active
-        background $color-gray-dark
-    &[disabled]
-        background $color-gray-dark
-        color $color-assist
-        border-color $color-gray
-        cursor not-allowed
-        &:hover
-        &:active
-            @extend .v-btn[disabled]
-        
-.v-btn_primary
-.v-btn_success
-.v-btn_warning
-.v-btn_danger
-    color #fff
-.v-btn_primary
-    background $color-theme
-    border-color $color-theme
-    &:hover
-        background $color-theme-light
-        border-color $color-theme-light
-    &:active
-        background $color-theme-dark
-        border-color $color-theme-dark
-.v-btn_success
-    background $color-success
-    border-color $color-success
-    &:hover
-        background $color-success-light
-        border-color $color-success-light
-    &:active
-        background $color-success-dark
-        border-color $color-success-dark
-.v-btn_warning
-    background $color-warning
-    border-color $color-warning
-    &:hover
-        background $color-warning-light
-        border-color $color-warning-light
-    &:active
-        background $color-warning-dark
-        border-color $color-warning-dark
-.v-btn_danger
-    background $color-danger
-    border-color $color-danger
-    &:hover
-        background $color-danger-light
-        border-color $color-danger-light
-    &:active
-        background $color-danger-dark
-        border-color $color-danger-dark
+      @extend .v-btn[disabled]
 
+.v-btn_loading
+  position relative
+  display inline-block
+  vertical-align middle
+  .v-spinner
+    position: absolute
+    top: -8px
+    width: 16px
+    left: -16px
+
+.v-btn_primary
+.v-btn_success
+.v-btn_warning
+.v-btn_danger
+  color #fff
+
+.v-btn_primary
+  background $color-theme
+  border-color $color-theme
+  &:hover
+    background $color-theme-light
+    border-color $color-theme-light
+  &:active
+    background $color-theme-dark
+    border-color $color-theme-dark
+
+.v-btn_success
+  background $color-success
+  border-color $color-success
+  &:hover
+    background $color-success-light
+    border-color $color-success-light
+  &:active
+    background $color-success-dark
+    border-color $color-success-dark
+
+.v-btn_warning
+  background $color-warning
+  border-color $color-warning
+  &:hover
+    background $color-warning-light
+    border-color $color-warning-light
+  &:active
+    background $color-warning-dark
+    border-color $color-warning-dark
+
+.v-btn_danger
+  background $color-danger
+  border-color $color-danger
+  &:hover
+    background $color-danger-light
+    border-color $color-danger-light
+  &:active
+    background $color-danger-dark
+    border-color $color-danger-dark
 
 .v-btn_sm
-    padding 6px 10px
+  padding 6px 10px
+
 .v-btn_lg
-    padding 12px 19px
+  padding 12px 19px
