--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -68,15 +68,15 @@ input, button, textarea
 
 
 @import "../components/grid/index.styl"
-
-@import "../components/radio/index.styl"
-@import "../components/checkbox/index.styl"
-// 数据
-@import "../components/pagination/index.styl"
-@import "../components/table/index.styl"
-
-@import "../components/portal/index.styl"
-@import "../components/upload/index.styl"
-
+@import "../components/btn/index.styl"
+@import "../components/comment/index.styl"
+@import "../components/dialog/index.styl"
+@import "../components/dropdown/index.styl"
+@import "../components/form/index.styl"
+@import "../components/icon/index.styl"
 @import "../components/article/index.styl"
 @import "../components/toast/index.styl"
+@import "../components/topbar/index.styl"
+@import "../components/spinner/index.styl"
+@import "../components/input/index.styl"
+@import "../components/input-group/index.styl"
