--- a/src/components/topbar/index.styl
+++ b/src/components/topbar/index.styl
@@ -1,3 +1,4 @@
+$topbar-zindex = $zindex['topbar']
 .v-topbar
     background #fff
     height 100%
@@ -58,22 +59,44 @@
     img
         max-height 30px
 
+.v-topbar_right-cover
+    position fixed
+    top 0
+    left 0
+    right 0
+    bottom 0
+    background rgba(#000, .5)
+    display none
+    z-index ($topbar-zindex - 1)
+
 @media (max-width 500px)
     .v-topbar_right
         .v-icon_more
             display block
+            position fixed
+            right 18px
+            top 18px
+            z-index ($topbar-zindex + 1)
 
     .v-topbar_links
+        padding-top 60px
         min-width 120px
         position fixed
-        top 60px
+        top 0
         bottom 0
         right 0
-        z-index 111
+        z-index $topbar-zindex
         height auto
         flex-direction column
         background #fff
-        box-shadow -2px 2px 2px #f1f1f1
         display none
         > *
             height 50px
+
+    .side
+        .v-topbar_links
+            display flex
+        .v-icon_more
+            fill $color-theme
+        .v-topbar_right-cover
+            display block
