--- a/src/components/toast/index.styl
+++ b/src/components/toast/index.styl
@@ -23,9 +23,10 @@
     background $color-danger
   &.loading
     padding 20px
-    background rgba(#000, .5)
     .v-spinner
+      display block
       width 24px
+      margin 0 auto 15px
 
   .icon-close
     position absolute
