--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -61,6 +61,8 @@ a
 .flex
   display flex
   align-items center
+.flex-fit
+  flex 1
 input, button, textarea
   font-family inherit
   font-size inherit
